<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello emed-mobi!</string>
    <string name="app_name">EmedMobi</string>
    <string name="connection_error">Błąd połączenia z serwerem</string>
    <string name="connections_stub_on">Połączenia z serwerem usług zamockowane</string>
    <string name="connections_stub_off">Połączenia z serwerem usług włączone</string>
    <string name="user_not_authenticated">Brak informacji o użytkowniku, zaloguj się ponownie</string>
    <!-- <string name="app_version">${project.version}-#${buildNumber}</string> -->
    <string name="app_version">0.7.5-SNAPSHOT</string>
    <string name="add">Dodaj obserwacje</string>
    <string name="cancel">Anuluj</string>
    <string name="err_cant_get_patient_info">Nie można pobrać informacji o pacjencie</string>
    <string name="username">Użytkownik</string>
    <string name="password">Hasło</string>
    <string name="login">Zaloguj</string>
    <string name="empty_username_error">Nazwa użytkownika nie może być pusta</string>
    <string name="empty_password_error">Podaj hasło użytkownika</string>
    <string name="wrong_user_credentials">Podano nieprawidłowe dane logowania</string>
    <string name="patient_list">Lista przyjętych pacjentów</string>
    <string name="add_observations">Dodaj</string>
    <string name="hemodynamics_add_title">Podaj wartości parametrów hemodynamiki</string>
    <string name="hemodynamics_parameter_history">Historia obserwacji parametru</string>
    <string name="hr">HR</string>
    <string name="sat">Sat%</string>
    <string name="abp">ABP</string>
    <string name="cvp">CVP</string>
    <string name="pap">PAP</string>
    <string name="co">CO</string>
    <string name="lap">LAP</string>
    <string name="add_observation_success">Pomyślnie zapisano pomiary</string>
    <string name="add_observation_error">Nie udało się dodać pomiarów, spróbuj ponownie później</string>
    <string name="get_observations_error">Nie udało się pobrać obserwacji pacjenta, spróbuj ponownie później</string>
    <string name="hemodynamics_add_date">Data</string>
    <string name="hours">Godziny</string>
    <string name="add_observation_title">Dodaj obserwacje</string>
    <string name="observation_add_date">Data</string>
    <string name="gasometry">Gazometria</string>
    <string name="hemodynamics">Hemodynika</string>
    <string name="mandatory">Pole wymagane</string>
    <string name="table_grouped_day_bilans">Bilans bieżącej doby:</string>
    <string name="details">Szczegóły</string>
    <string name="fluid_balance">Bilans płynów</string>
    <string name="koloidy">Koloidy</string>
    <string name="drenaz">Drenaż</string>
    <string name="diureza">Diureza / HDF</string>
    <string name="sonda">Sonda</string>
    <string name="bolusy">Leki - bolusy</string>
    <string name="wlewy">Leki - Wlewy</string>
    <string name="sonda_in">Sonda - podaż</string>
    <string name="sonda_out">Sonda - zalegania</string>
    <string name="stolce_wymioty">Stolce / wymioty</string>
    <string name="morfologia">Morfologia</string>
    <string name="biochemia">Biochemia</string>
    <string name="koagulologia">Koagulologia</string>
    <string name="dodaj">Dodaj</string>
    <string name="type_key">Klucz parametru</string>
    <string name="type_visible">Nazwa parametru</string>

</resources>