<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true" >

    <LinearLayout
        android:layout_width="505dp"
        android:layout_height="220dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/loginPresenter_recentUsers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </ListView>
        </LinearLayout>

        <View
            android:id="@+id/separator"
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:background="@color/separator_color"
            android:padding="@dimen/default_view_padding" />

        <View
            android:id="@+id/separator"
            android:layout_width="4dip"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/default_view_padding" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <EditText
                android:id="@+id/loginPresenter_usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:ems="10" />

            <TextView
                android:id="@+id/loginPresenter_usernameErrorMessageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/error_message_text_color"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:editable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="textNoSuggestions" />

            <EditText
                android:id="@+id/loginPresenter_passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/loginPresenter_passwordErrorMessageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/error_message_text_color"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/login_login_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/loginPresenter_loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/login_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:text="@string/app_version" />

</RelativeLayout>