<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black" >

    <ProgressBar
        android:id="@+id/patient_card_info_loading_mark"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minHeight="0dip" />

    <LinearLayout
        android:id="@+id/patient_card_info_panel"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:paddingTop="10dip" >

        <TextView
            android:id="@+id/patient_card_displayname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="Grzegorz Lipecki"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right" >

            <TextView
                android:id="@+id/custom_observation_type_group_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:text="Data ur."
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/patient_card_birthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1989-07-23"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/patients_patient_tile_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dip"
                android:layout_marginRight="5dip"
                android:text="Grupa krwi"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/patient_card_blood_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="A Rh+"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/patients_patient_tile_day_of_admission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dip"
                android:layout_marginRight="5dip"
                android:text="Masa"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/patient_card_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15,5kg"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/hemodynamics_p_history_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dip"
                android:layout_marginRight="5dip"
                android:text="BSA"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/patient_card_bsa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0,75 m2"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/patients_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dip"
                android:layout_marginRight="5dip"
                android:text="Płeć"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/patient_card_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mężczyzna"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/patient_card_info_panel_row_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip" >

        <TextView
            android:id="@+id/patient_card_pesel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="89072306830"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="35dip"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip" >

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="5dip"
                android:text="Data"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/patient_card_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="2012-03-23"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/login_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dip"
                android:layout_marginRight="5dip"
                android:text="Data przyjęcia"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/patient_card_admission_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2012-04-04"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dip"
                android:layout_marginRight="5dip"
                android:text="Doba"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/patient_card_day_of_admission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3 doba"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:background="@color/separator_color"
        android:padding="@dimen/default_view_padding" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <HorizontalScrollView
            android:id="@+id/patient_card_groups_panel"
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:layout_weight="0.90" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/patient_card_hemodynamics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                    android:text="@string/hemodynamics" />

                <Button
                    android:id="@+id/patient_card_fluidbalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                    android:text="@string/fluid_balance" />

                <Button
                    android:id="@+id/patient_card_gasometry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                    android:text="@string/gasometry" />

                <Button
                    android:id="@+id/patient_card_cbc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/morfologia" />

                <Button
                    android:id="@+id/patient_card_bloodchemistry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/biochemia" />

                <Button
                    android:id="@+id/patient_card_coagulationpanel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/koagulologia" />

            </LinearLayout>
        </HorizontalScrollView>

        <View
        android:id="@+id/separator"
        android:layout_height="match_parent"
        android:layout_width="1dip"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:background="@color/separator_color"
        android:padding="@dimen/default_view_padding" />
        
        <Button
            android:id="@+id/patient_card_add_observation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

    </LinearLayout>
    
    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:background="@color/separator_color"
        android:padding="@dimen/default_view_padding" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/patient_card_observations_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>